# castor

./: .dir-locals.el  .envrc  .gitignore  .gitmodules  .ocamlformat  .rgignore  Figures.ipynb  LICENSE  Makefile  README.md  builder.c.tmpl  castor-opt.opam  castor.opam  castor_test.opam  cmph.opam  collections.ml  config-sample.sh  config.defaults  config_defaults.ml  configure  discover.ml  dune  dune-project  fastdb.opam  flake.nix  genhash.opam  jbuild  jbuild-ignore  layout.ml  main.c  query2-row-major.c  runtest.sh  sqlgg.opam  visitors_fixup.py
bench/: .gitignore  1-opt.txt  10-no-opt.txt  10-no.sql  11-no-opt.txt  11-no.sql  12-opt.txt  12.sql  14-opt.txt  14.sql  15-opt.txt  16-no-opt.txt  17-opt.txt  17.sql  18-opt.txt  19-opt.txt  19.sql  2-opt.txt  2.sql  21-no.sql  22.sql  3-no-opt.txt  4-opt.txt  4.sql  5-no-opt.txt  6-opt.txt  6.sql  7-opt.txt  7.sql  8-opt.txt  8.sql  9-opt.txt  9.sql  Makefile  dune  groupby.sexp  mk_make.py  queries.json  query15.sexp  query6.sexp  (+3 more)
bench/activity/: queries.sql  rahar_schema_280318.sql  sample_data_1.csv  sample_data_2.csv  vizQueries.java
bench/cozy/: .gitignore  1.cpp  11-no.cpp  12.cpp  14.cpp  15.cpp  17.cpp  18.cpp  19.cpp  3-no.cpp  4.cpp  6.cpp  harness17.cpp  harness4.cpp  mk_make.py  query96.spec  stdlib.cpp
bench/demomatch/: .gitignore  example1.txt  example2.txt  example3.txt  no-dedup-both-hash.txt  no-dedup-col-store.txt  no-dedup-nested-outer-hash.txt  no-dedup-nested.txt  no-dedup-rhs-hash.txt  no-dedup-row-store-push-filter.txt  no-dedup-row-store.txt  run-bench.py  setup.md  setup.sh
bench/multi/: .gitignore  1-opt.txt  2-opt.txt  3-no-opt.txt  4-opt.txt  5-no-opt.txt  Makefile  mk_make.py  queries.json
bench/tpcds/: build.sh  mk_make.py  parse_params.py  q1.txt  q10.txt  q11.txt  q13.txt  q15.txt  q19.txt  q25.txt  q26.txt  q29.txt  q3.txt  q30.txt  q31.txt  q32.txt  q33.txt  q34.txt  q35.txt  q37.txt  q38.txt  q4.txt  q41.txt  q42.txt  q43.txt  q45.txt  q46.txt  q48.txt  q50.txt  q52.txt  q55.txt  q56.txt  q58.txt  q59.txt  q6.txt  q60.txt  q64.txt  q65.txt  q68.txt  q69.txt  (+28 more)
bench/tpch/: .gitignore  1-gold.sql  1-gold.txt  1-view-index.sql  1-view.sql  1.args  1.sql  1.txt  10-no-gold.txt  10-no.args  10-no.txt  10.sql  10.txt  11-no-gold.args  11-no-gold.txt  11-no.args  11-no.txt  11.sql  11.txt  12-gold.args  12-gold.txt  12.args  12.txt  13.sql  13.txt  14-gold.args  14-gold.txt  14.args  14.txt  15-gold.txt  15.args  15.sql  15.txt  16-no-gold.args  16-no-gold.txt  16-no.args  16-no.sql  16-no.txt  16.sql  17-gold.txt  (+67 more)
bench/tpch-docker/: 00_tpch_setup.sh  01_indexes.sh  02_sample.sh  Dockerfile
bench/tpch-hyper/: .gitignore  1-2.dump.sql  1-2.load.sql  1.dump.sql  1.load.sql  1.schema.sql  1.sql  10-no.dump.sql  10-no.load.sql  10-no.schema.sql  10-no.sql  11-no.dump.sql  11-no.load.sql  11-no.schema.sql  11-no.sql  12.dump.sql  12.load.sql  12.schema.sql  12.sql  14.dump.sql  14.load.sql  14.schema.sql  14.sql  15.dump.sql  15.load.sql  15.schema.sql  15.sql  16-no.dump.sql  16-no.load.sql  16-no.schema.sql  16-no.sql  17.dump.sql  17.load.sql  17.schema.sql  17.sql  18.dump.sql  18.load.sql  18.schema.sql  18.sql  19.dump.sql  (+48 more)
bench/tpch-hyper-unspec/: 1.sql  10.sql  16.sql  18.sql  2.sql  21.sql  3.sql
cmph/: CHANGES.md  README.md  cmph.opam
cmph/lib/: cmph.ml  cmph.mli  dune  flags  util.ml
cmph/test/: dune  example.expected  example.ml  keys-fw-1.buf  keys-fw.buf  test.ml
eopt/: dedup_tactics.ml  dune  egraph_matcher.ml  extract.ml  filter_tactics.ml  groupby_tactics.ml  join_elim_tactics.ml  list_tactics.ml  ops.ml  orderby_tactics.ml  select_tactics.ml  simple_tactics.ml  simplify_tactic.ml  simplify_tactic.mli  string_tactics.ml  tactics_util.ml  transform.ml  transform.mli
etc/: castorlib.c  castorlib.h  castorlib_bench.c  castorlib_test.c  date.c  date.h  dune  load_bool.c  load_date.c  load_float.c  load_int.c  load_string.c  perf.c  shared.h  stdlib.c  stdlib.h  stdlib_test.c  stdlib_test.expected
etc/templates/: load_int.c  perf.c
genhash/lib/: dune  genhash.ml
lib/: abs_fixed.ml  abs_int.ml  abs_int.mli  abslayout.ml  abslayout.mli  abslayout0.ml  abslayout_db.ml  abslayout_db.mli  abslayout_db_intf.ml  abslayout_fold.ml  abslayout_fold.mli  abslayout_infix.ml  abslayout_intf.ml  abslayout_load.ml  abslayout_pp.ml  abslayout_pp.mli  abslayout_test.ml  abslayout_type.ml  abslayout_visitors.ml  annot.ml  annot.mli  approx_cost.ml  ast.ml  bench.ml  big_o.ml  bitstring.ml  bitstring.mli  builtin.ml  builtin.mli  candidate.ml  cardinality.ml  check.ml  codegen.ml  codegen.mli  codegen_intf.ml  codegen_test.ml  collections.ml  combinat.ml  combinat.mli  constructors.ml  (+151 more)
lib/templates/: builder.c
nix/: cmph.nix  ocaml_llvm.nix
paper/: algorithm.tex  conclusion.tex  eval.tex  example.tex  intro.tex  main.tex  related.tex  vldb.cls
scripts/: taxi_data.py
sql2code/: db_schema.ml  dune  python_block.ml  sql2code.ml  sql_parser.mly
sqlgg/: .gitignore  README.md
sqlgg/lib/: dune  parser.ml  sql.ml  sql_lexer.mll  sql_parser.mly
test/: abslayout_fold_test.ml  abslayout_test.ml  codegen_test.ml  cse_test.ml  db_test.ml  dune  equiv_test.ml  free_test.ml  implang_opt_test.ml  implang_test.ml  is_serializable_test.ml  jbuild  layout_to_depjoin_test.ml  ops_test.ml  pred_test.ml  project_test.ml  query_test.py  resolve_test.ml  schema_test.ml  serialize_test.ml  simplify_tactic_test.ml  sql_test.ml  test.ml  test_util.ml  type_tests.ml  unnest_test.ml
test/abslayout_fold/: abslayout_test.ml  dune
test/codegen/: agg.query  agg.query.ir.expected  agg.query.layout.expected  agg.query.ll.expected  agg.query.result.expected  date-arith.query  date-arith.query.ir.expected  date-arith.query.ll.expected  date-arith.query.result.expected  depjoin.query  depjoin.query.ir.expected  depjoin.query.layout.expected  depjoin.query.ll.expected  depjoin.query.result.expected  dune  dune.inc  gen_dune.py  hash-idx.query  hash-idx.query.ir.expected  hash-idx.query.layout.expected  hash-idx.query.ll.expected  (+68 more)
test_append/: tpch_1k.sql  tpch_1k_batch_init.sql  tpch_scraper.py
(+264 files in other folders)
