opam-version: "2.0"
name: "castor-opt"
version: "~unknown"
synopsis: "Optimizer for the Castor synthesizer"
maintainer: "Jack Feser <feser@csail.mit.edu>"
authors: "Jack Feser <feser@csail.mit.edu>"
dev-repo: "git+https://github.com/jfeser/castor-opt.git"
homepage: "https://github.com/jfeser/castor-opt"
bug-reports: "https://github.com/jfeser/castor-opt/issues"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "dune" {build & >= "1.1"}
  "castor"

  "core" {>= "v0.12"}
  "ppx_compare" {>= "v0.12"}
  "ppx_sexp_conv" {>= "v0.12"}
  "ppx_hash" {>= "v0.12"}
  "ppx_let" {>= "v0.12"}
  "logs" {>= "0.6"}
  "fmt" {>= "0.8.5"}
  "cmdliner" {>= "1.0"}
  "yojson" {>= "1.7"}
  "ocamlgraph" {>= "1.8.8"}
  "combinat" {>= "1.0"}
]
