opam-version: "2.0"
name: "castor"
version: "~unknown"
maintainer: "Jack Feser <feser@csail.mit.edu>"
authors: "Jack Feser <feser@csail.mit.edu>"
dev-repo: "git+https://github.com/jfeser/castor.git"
homepage: "https://github.com/jfeser/castor"
bug-reports: "https://github.com/jfeser/castor/issues"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "dune" {build & >= "1.1"}
  "menhir" {build}

  "bisect_ppx"
  "ounit" {>= "2"}

  "base" {>= "v0.11" & < "v0.12"}
  "core" {>= "v0.11" & < "v0.12"}
  "stdio" {>= "v0.11" & < "v0.12"}
  "re2" {>= "v0.11" & < "v0.12"}
  "postgresql" {>= "4.4" & < "4.5"}
  "logs" {>= "0.6" & < "0.7"}
  "llvm" {>= "6" & < "8"}
  "expect_test_helpers_kernel" {>= "v0.11" & < "v0.12"}
  "hashcons"
  "cmph"

  "ppx_compare" {>= "v0.11" & < "v0.12"}
  "ppx_sexp_conv" {>= "v0.11" & < "v0.12"}
  "ppx_hash" {>= "v0.11" & < "v0.12"}
  "ppx_bin_prot" {>= "v0.11" & < "v0.12"}
  "ppx_let" {>= "v0.11" & < "v0.12"}
  "visitors"
]
