opam-version: "2.0"
name: "castor"
version: "~unknown"
synopsis: "A deductive database synthesizer"
maintainer: "Jack Feser <feser@csail.mit.edu>"
authors: "Jack Feser <feser@csail.mit.edu>"
dev-repo: "git+https://github.com/jfeser/castor.git"
homepage: "https://github.com/jfeser/castor"
bug-reports: "https://github.com/jfeser/castor/issues"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "dune" {build & >= "1.1"}
  "menhir" {build}

  "bisect_ppx"
  "ounit" {>= "2"}

  "base" {>= "v0.12"}
  "core" {>= "v0.12"}
  "stdio" {>= "v0.12"}
  "postgresql" {>= "4.4" & < "4.5"}
  "bos" {>= "0.2" & < "0.3"}
  "logs" {>= "0.6" & < "0.7"}
  "llvm" {>= "7.0.0" & < "8.0.0"}
  "expect_test_helpers_kernel" {>= "v0.12"}
  "gen" {>= "0.5" & < "0.6"}
  "cmph" {>= "0.1" & < "0.2"}
  "hashcons" {>= "1.3"}

  "ppx_compare" {>= "v0.12"}
  "ppx_sexp_conv" {>= "v0.12"}
  "ppx_hash" {>= "v0.12"}
  "ppx_let" {>= "v0.12"}
  "visitors" {= "20180513"}
]
