opam-version: "2.0"
name: "fastdb"
version: "~unknown"
maintainer: "Jack Feser <feser@csail.mit.edu>"
authors: "Jack Feser <feser@csail.mit.edu>"
dev-repo: "git+https://github.com/jfeser/fastdb.git"
homepage: "https://github.com/jfeser/fastdb"
bug-reports: "https://github.com/jfeser/fastdb/issues"
build: [["jbuilder" "build" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "menhir" {build}
  
  "oUnit"

  "async" {>= "0.11.0"}
  "base" {>= "0.11.0"}
  "core" {>= "0.11.0"}
  "stdio" {>= "0.11.0"}
  "postgresql"
  "logs"
  "llvm" {>= "5.0.0"}
  "hashcons"

  "ppx_driver"
  "ppx_compare"
  "ppx_sexp_conv"
  "ppx_hash"
  "ppx_bin_prot"
  "ppx_let"
]
