(install
  (section etc)
  (files stdlib.c load_bool.c load_float.c load_int.c load_string.c load_date.c perf.c shared.h))

(rule
  (deps stdlib.c stdlib_test.c)
  (targets stdlib_test.exe)
  (action (run %{cc} stdlib_test.c -o stdlib_test.exe)))

(rule
  (with-stdout-to stdlib_test.output (run ./stdlib_test.exe)))

(alias
  (name runtest)
  (action (diff stdlib_test.expected stdlib_test.output)))

