(install
  (section etc)
  (files date.c date.h castorlib.c castorlib.h load_bool.c load_date.c load_float.c load_int.c load_string.c perf.c))

(rule
  (deps castorlib.c castorlib.h castorlib_test.c date.c date.h)
  (targets castorlib_test.exe)
  (action (run %{cc} date.c castorlib.c castorlib_test.c -o castorlib_test.exe)))

(rule
  (with-stdout-to castorlib_test.output (run ./castorlib_test.exe)))

(alias
  (name runtest)
  (action (diff castorlib_test.expected castorlib_test.output)))

