(library
 (name castor_opt)
 (public_name castor-opt)
 (libraries
   castor
   castor_test
   core
   postgresql
   yojson
   combinat
   ocamlgraph
 )
 (flags :standard -open Core -open Castor -unboxed-types)
 (inline_tests)
 (preprocess
  (pps
    ppx_sexp_conv
    ppx_compare
    ppx_hash
    ppx_expect
    ppx_let
)))
